[project]
name = "abenix-runtime"
version = "0.1.0"
description = "Abenix agent execution engine"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.111.0",
    "pyyaml>=6.0.0",
    "duckduckgo-search>=6.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    # Meeting Representative — LiveKit real-time + token-mint + audio
    # stream. `livekit-api` mints server-side tokens; `livekit` is the
    # RTC client we use in the adapter. pinecone for persona RAG.
    "livekit>=0.17.0",
    "livekit-api>=0.7.0",
    "pinecone>=5.0.0",
    # Wave-2 scaling: NATS JetStream queue backend for per-pool consumers.
    # Optional at runtime (the selector falls back to Celery if missing)
    # but required when QUEUE_BACKEND=nats is the chosen transport.
    "nats-py>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
