[project]
name = "abenix-worker"
version = "0.1.0"
description = "Abenix async task workers"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.30.0",
    "pinecone>=5.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
